--- a/doc/callers.org
+++ b/doc/callers.org
@@ -1,5 +1,6 @@
 #+AUTHOR Hugues Balp
 #+TITLE The Callers plug-in
+#+COPYRIGHT @ THALES Communications & Security 2012 to 2015
 
 * TODO The Callers plug-in [2/7]				    :callers:
   :PROPERTIES:
@@ -46,9 +47,9 @@ The Callers plug-in
 ** TODO Implementation [0/4]
    Describe the internals of the plug-in
 *** TODO architecture of the plugin
-*** TODO big pictures [/]
-**** big picture of clang, callers and frama-C++ plugins		:all:
-    #+BEGIN_SRC dot :tangle callers.frama-c++.launcher.gen.dot
+*** TODO big pictures [12/13]
+**** DONE big picture of clang, callers and frama-C++ plugins	:all:ARCHIVE:
+    #+BEGIN_SRC dot : tangle callers.frama-c++.launcher.gen.dot
 digraph "Integration of Frama-C++ and Callers into the Clang/LLVM build & analysis process"
 {
 // title
@@ -165,6 +166,7 @@ label="Integration of Frama-C++ and Callers into the Clang/LLVM build & analysis
 "function callgraphs" [ label="function callgraphs\n.dot files", shape=box, color=green ]
 "callers backends" [ label="Callers backends\n(OCAML)", color="green" ]
 "metadata json file" -> "callers backends" [ color=green ]
+"metadata json file" -> "callers backends" [ dir=back, color=green ]
 "user config" -> "callers backends" [ color=green ]
 "callers backends" -> "function callgraphs" [ color=green ]
 
@@ -228,7 +230,7 @@ label="Integration of Frama-C++ and Callers into the Clang/LLVM build & analysis
 // End:
  
    #+END_SRC
-**** use of the Callers plugin with the cmake build  :analysis:callers:cmake:
+**** DONE use of the Callers plugin with the cmake build :analysis:callers:cmake:
     #+BEGIN_SRC dot :tangle callers.cmake.gen.dot
 digraph "Use of the Callers plugin with the cmake build"
 {
@@ -305,6 +307,7 @@ label="Use of the Callers plugin with the cmake build"
 "function callgraphs" [ label="function callgraphs\n.dot files", shape=box, color=blue ]
 "callers backends" [ label="Callers backends\n(OCAML)", color="blue" ]
 "metadata json file" -> "callers backends" [ color=blue ]
+"metadata json file" -> "callers backends" [ dir=back, color=blue ]
 "user config" -> "callers backends" [ color=blue ]
 "callers backends" -> "function callgraphs" [ color=blue ]
 
@@ -324,7 +327,7 @@ label="Use of the Callers plugin with the cmake build"
 // compile-command: "dot -Tpng callers.cmake.gen.dot > callers.cmake.gen.png"
 // End:
    #+END_SRC
-**** use of the Callers plugin with a custom build    :analysis:callers:scan:
+**** DONE use of the Callers plugin with a custom build :analysis:callers:scan:
     #+BEGIN_SRC dot :tangle callers.scan.gen.dot
 digraph "scan-callers" 
 {
@@ -413,6 +416,7 @@ label="Use of the Callers plugin with a custom build"
 "function callgraphs" [ label="function callgraphs\n.dot files", shape=box, color=blue ]
 "callers backends" [ label="Callers backends\n(OCAML)", color="blue" ]
 "metadata json file" -> "callers backends" [ color=blue ]
+"metadata json file" -> "callers backends" [ dir=back, color=blue ]
 "user config" -> "callers backends" [ color=blue ]
 "callers backends" -> "function callgraphs" [ color=blue ]
 
@@ -433,7 +437,7 @@ label="Use of the Callers plugin with a custom build"
 // End:
  
    #+END_SRC
-**** custom build process				       :build:custom:
+**** DONE custom build process				       :build:custom:
     #+BEGIN_SRC dot :tangle build.custom.gen.dot
 digraph "custom build " 
 {
@@ -469,7 +473,7 @@ label="user custom build process"
 // End:
  
    #+END_SRC
-**** cmake-build process					:build:cmake:
+**** DONE cmake-build process					:build:cmake:
     #+BEGIN_SRC dot :tangle build.cmake.gen.dot
 digraph "cmake build" 
 {
@@ -504,7 +508,7 @@ label="cmake build process"
 // End:
  
    #+END_SRC
-**** clang build process					:build:clang:
+**** DONE clang build process					:build:clang:
     #+BEGIN_SRC dot :tangle build.clang.gen.dot
 digraph "clang build" 
 {
@@ -551,7 +555,7 @@ label="clang build process"
 // End:
  
    #+END_SRC
-**** clang analysis process				     :analysis:clang:
+**** DONE clang analysis process			     :analysis:clang:
     #+BEGIN_SRC dot :tangle analysis.clang.gen.dot
 digraph "clang analysis process" 
 {
@@ -589,7 +593,7 @@ label="clang analysis process"
 "clang AST" -> "clang++ frontend" [ dir=back ]
 
 // clang analysis
-"analysis results" [ label="clang analysis results, " shape="box" ]
+"analysis results" [ label="clang analysis results", shape="box" ]
 "scan-build" -> "clang static analyzer"
 "clang static analyzer" -> "clang checkers"
 "clang checkers" -> "analysis results"
@@ -614,7 +618,161 @@ label="clang analysis process"
 // End:
  
    #+END_SRC
-**** frama-c value analysis process		  :frama:c:VA:value:analysis:
+**** DONE from frama-C++ frontend to Value analysis :analysis:frama:cpp:value:
+    #+BEGIN_SRC dot :tangle analysis.frama-c++.frontend.gen.dot
+digraph "Frama-C++ frontend architecture"
+{
+// title
+labelloc="b"
+label="From Frama-C++ frontend to value analysis"
+
+// "scan-build" [ label="clang scan-build" ]
+
+// user build
+"user build" [ label="custom build\n(autoconf, cmake..)" ]
+"build commands" [ label="build commands", shape=box ]
+"user build" -> "build commands"
+
+// // scan build
+// "scan-build" -> "user build"
+// "scan-build" -> "build commands" [ dir=back ]
+
+// // compilation
+// "object code" [ shape="box" ]
+
+// // c compilation
+// "c code" [ label="C code", shape="box" ]
+// "c compiler" [ label="C compiler\n(gcc, clang..)" ]
+// "build commands" -> "c compiler"
+// "c compiler" -> "c code" [ dir=back ]
+// "c compiler" -> "object code"
+
+// // c++ compilation
+"cpp code" [ label="C++ code", shape="box" ]
+"cpp compiler" [ label="C++ compiler\n(g++,clang++..)" ]
+"build commands" -> "cpp compiler"
+"cpp compiler" -> "cpp code" [ dir=back ]
+"cpp compiler" -> "object code"
+
+// // cmake build
+// "compile_commands" [ label="compile_commands.json", shape=box ]
+// "cmake build" -> "cpp compiler"
+// "cmake build" -> "c compiler"
+// "cmake build" -> "compile_commands"
+
+// // clang compilation
+// "clang object code" [ label="Clang/LLVM object code", shape="box" ]
+// "llvm" [ label="LLVM" ]
+// //"llvm" [ label="LLVM Optimizer\n& Code Generator" ]
+// "llvm" -> "clang object code"
+
+// // clang compilation of C code
+// "clang compiler" [ label="Clang compiler" ]
+"clang AST" [ shape=box ]
+// "scan-build" -> "clang compiler"
+// "clang frontend" [ label="Clang frontend" ]
+// "clang frontend" -> "c code" [ dir=back ]
+// //"clang frontend" -> "clang AST"
+// "clang AST" -> "clang frontend" [ dir=back ]
+// "clang compiler" -> "clang frontend"
+// "clang compiler" -> "clang AST"  [ dir=back ]
+// "clang compiler" -> "llvm"
+
+// // clang++ compilation of C++ code
+// "clang++ compiler" [ label="Clang++ compiler" ]
+// "scan-build" -> "clang++ compiler"
+"clang++ frontend" [ label="Clang++ frontend" ]
+"clang++ frontend" -> "cpp code" [ dir=back ]
+"clang AST" -> "clang++ frontend" [ dir=back ]
+// "clang++ compiler" -> "clang++ frontend"
+// "clang++ compiler" -> "clang AST"  [ dir=back ]
+// "clang++ compiler" -> "llvm"
+
+// // clang analysis
+// "clang analysis results" [ shape="box" ]
+// "scan-build" -> "clang static analyzer"
+// "clang static analyzer" -> "clang checkers"
+// "clang checkers" -> "clang analysis results"
+// "clang checkers" -> "clang AST" [ dir=back ]
+
+// // clang C code analysis
+// "clang static analyzer" -> "clang frontend"
+
+// // clang C++ code analysis
+// "clang static analyzer" -> "clang++ frontend"
+
+// "metadata json file" [ shape="box", color=green ]
+
+// "analysis goals" [ label="analysis goals", shape=box, color=green ]
+// "user config" [ label="user analysis\nbash script", shape=box, color=green ]
+// "analysis goals" -> "user config" [ style=dashed, label=manual, color=green ]
+// "analysis goals" -> "function callgraphs" [ style=dashed, label="manual", dir=back, color=green ]
+// "function callgraphs" [ label="function callgraphs\n.dot files", shape=box, color=green ]
+
+// frama-c++
+"frama-c++" [ label="frama-c++", color=blue ]
+"frama-c++" -> "clang++ frontend" [ color=blue ]
+"frama-c++" -> "framaCIRGen" [ color=blue ]
+"frama-c++" -> "frama-clang" [ color=blue ]
+
+// frama-clang analysis
+"frama-clang" [ label="frama-clang\n(OCAML)", color=blue ]
+"framaCIRGen" [ label="framaCIRGen\n(C++)", color=blue ]
+//"fir" [ label="Frama-C Intermediate\nRepresentation", shape=box ]
+"fir" [ label="Frama-C IR", shape=box, color=blue ]
+"cabs" [ label = "C Abstract", shape=box, color=blue ]
+//"cil" [ label = "C Intermediate Language" ]
+"cil" [ label = "CIL", shape=box ]
+
+"clang AST" -> "framaCIRGen" [ color=blue ]
+//"framaCIRGen" -> "fir"
+"fir" -> "framaCIRGen" [ dir=back, color=blue ]
+"fir" -> "frama-clang" [ color=blue ]
+"frama-clang" -> "cabs" [ color=blue ]
+//"cabs" -> "frama-clang" [ dir=back, color=blue ]
+"cabs" -> "frama-c" [ color=blue ]
+//"cabs" -> "frama-c" [ dir=back ]
+
+// // security analysis plugins
+// "fc security plugins" [ label="STANCE frama-c\nsecurity plugins", color=blue ]
+// "fc security plugins" -> "VA results" [ dir=back, color=blue ]
+// "security analysis results" -> "fc security plugins" [ dir=back, color=blue ]
+
+// frama-c value analysis
+"VA results" [ shape=box ]
+"VA" [ label="Value Analysis" ]
+"VA results" [ label="VA results" ]
+"VA" -> "frama-c" [ dir=back ]
+//"VA" -> "VA results"
+"VA results" -> "VA" [ dir=back ]
+"VA" -> "cil" [ dir=back ]
+
+// frama-c analysis
+"pp C code" [ shape=box ]
+"frama-c" [ label="frama-c" ]
+"frama-c" -> "c code" [ dir=back ]
+//"c code" -> "frama-c"
+"cil" -> "frama-c"
+"cil" -> "frama-c" [ dir=back ]
+//"frama-c" -> "pretty-printed c code" [ label="print" ]
+"frama-c" -> "pp C code" [ label="print" ]
+//"frama-c" -> "c code" [ label="print" ]
+
+// user analysis goals & config
+"analysis goals" [ label="analysis goals", shape=box ]
+"user config" [ label="user config\n(bash)", shape=box ]
+"analysis goals" -> "user config" [ style=dashed, label=manual ]
+"build commands" -> "user config" [ style=dashed, label=manual ]
+"user config" -> "frama-c++"
+"analysis goals" -> "VA results" [ style=dashed, label="manual", dir=back ]
+}
+
+// Local Variables:
+// compile-command: "dot -Tpng analysis.frama-c++.frontend.gen.dot > analysis.frama-c++.frontend.gen.png"
+// End:
+ 
+   #+END_SRC
+**** DONE frama-c value analysis process	  :frama:c:VA:value:analysis:
     #+BEGIN_SRC dot :tangle analysis.frama-c.VA.gen.dot
 digraph "Frama-C Value Analysis process"
 {
@@ -656,7 +814,7 @@ label="Frama-C Value Analysis process"
 // End:
  
    #+END_SRC
-**** frama-c security analysis processes 	  :frama:c:VA:value:analysis:
+**** DONE frama-c security analysis processes	  :frama:c:VA:value:analysis:
     #+BEGIN_SRC dot :tangle analysis.frama-c.security.gen.dot
 digraph "Frama-C Security Analysis processes"
 {
@@ -847,7 +1005,7 @@ label="Frama-C Security Analysis processes"
 // End:
  
    #+END_SRC
-**** preprocess dot files					    :dot2png:
+**** DONE preprocess dot files					    :dot2png:
      #+BEGIN_SRC bash :tangle dot2png.gen.sh
 #!/bin/bash
 for d in `ls *.gen.dot`
@@ -856,11 +1014,13 @@ dot -Tpng $d > $d.png
 #dot -Tpng $d > $d.png 2> $d.stderr
 done
      #+END_SRC
-**** clean work directory					      :clean:
+**** DONE clean work directory					      :clean:
      #+BEGIN_SRC bash :tangle clean.gen.sh
 #!/bin/bash
 rm -f *.gen.*
      #+END_SRC
+**** TODO [#A] Envoyer ces figures à Frank Védrine comme annoncé hier :email:cea:
+     DEADLINE: <2015-09-22 mar.>
 *** TODO usage of other plug-ins
 *** TODO special requirements such as libraries or external tools, etc.
    #+BEGIN_SRC org :tangle callers.chap6.tcs.D4.2.2.gen.org
