--- a/doc/callers.org
+++ b/doc/callers.org
@@ -48,7 +48,7 @@ The Callers plug-in
    Describe the internals of the plug-in
 *** DONE architecture of the plugin
 *** DONE big pictures [14/14]
-**** DONE big picture of clang, callers and frama-C++ plugins	:all:ARCHIVE:
+**** DONE big picture of clang, callers and frama-C++ plugins		:all:
     #+BEGIN_SRC dot : tangle callers.frama-c++.launcher.gen.dot
 digraph "Integration of Frama-C++ and Callers into the Clang/LLVM build & analysis process"
 {
@@ -171,11 +171,11 @@ label="Integration of Frama-C++ and Callers into the Clang/LLVM build & analysis
 "callers backends" -> "function callgraphs" [ color=green ]
 
 // frama-c++
-"scan-callers" -> "frama-c++" [ color=green ]
-"frama-c++" [ label="frama-c++", color=blue ]
-"frama-c++" -> "clang++ frontend" [ color=blue ]
-"frama-c++" -> "framaCIRGen" [ color=blue ]
-"frama-c++" -> "frama-clang" [ color=blue ]
+"scan-callers" -> "frama-c" [ color=green ]
+"frama-c" [ label="frama-c", color=blue ]
+"framaCIRGen" -> "clang++ frontend" [ color=blue ]
+"frama-c" -> "framaCIRGen" [ color=blue ]
+"frama-c" -> "frama-clang" [ color=blue ]
 
 // frama-clang analysis
 //"scan-callers" -> "frama-clang"
@@ -625,94 +625,31 @@ digraph "Frama-C++ frontend architecture"
 labelloc="b"
 label="From Frama-C++ frontend to value analysis"
 
-// "scan-build" [ label="clang scan-build" ]
-
 // user build
 "user build" [ label="custom build\n(autoconf, cmake..)" ]
 "build commands" [ label="build commands", shape=box ]
 "user build" -> "build commands"
 
-// // scan build
-// "scan-build" -> "user build"
-// "scan-build" -> "build commands" [ dir=back ]
-
-// // compilation
-// "object code" [ shape="box" ]
-
-// // c compilation
-// "c code" [ label="C code", shape="box" ]
-// "c compiler" [ label="C compiler\n(gcc, clang..)" ]
-// "build commands" -> "c compiler"
-// "c compiler" -> "c code" [ dir=back ]
-// "c compiler" -> "object code"
-
-// // c++ compilation
-"cpp code" [ label="C++ code", shape="box" ]
+// c++ compilation
+"c code" [ shape=box, label="C code" ]
+"cpp code" [ label="C++ code", shape=box ]
 "cpp compiler" [ label="C++ compiler\n(g++,clang++..)" ]
+"object code" [ label="object code", shape="box" ]
 "build commands" -> "cpp compiler"
 "cpp compiler" -> "cpp code" [ dir=back ]
 "cpp compiler" -> "object code"
 
-// // cmake build
-// "compile_commands" [ label="compile_commands.json", shape=box ]
-// "cmake build" -> "cpp compiler"
-// "cmake build" -> "c compiler"
-// "cmake build" -> "compile_commands"
-
-// // clang compilation
-// "clang object code" [ label="Clang/LLVM object code", shape="box" ]
-// "llvm" [ label="LLVM" ]
-// //"llvm" [ label="LLVM Optimizer\n& Code Generator" ]
-// "llvm" -> "clang object code"
-
-// // clang compilation of C code
-// "clang compiler" [ label="Clang compiler" ]
 "clang AST" [ shape=box ]
-// "scan-build" -> "clang compiler"
-// "clang frontend" [ label="Clang frontend" ]
-// "clang frontend" -> "c code" [ dir=back ]
-// //"clang frontend" -> "clang AST"
-// "clang AST" -> "clang frontend" [ dir=back ]
-// "clang compiler" -> "clang frontend"
-// "clang compiler" -> "clang AST"  [ dir=back ]
-// "clang compiler" -> "llvm"
 
-// // clang++ compilation of C++ code
-// "clang++ compiler" [ label="Clang++ compiler" ]
-// "scan-build" -> "clang++ compiler"
 "clang++ frontend" [ label="Clang++ frontend" ]
 "clang++ frontend" -> "cpp code" [ dir=back ]
 "clang AST" -> "clang++ frontend" [ dir=back ]
-// "clang++ compiler" -> "clang++ frontend"
-// "clang++ compiler" -> "clang AST"  [ dir=back ]
-// "clang++ compiler" -> "llvm"
 
-// // clang analysis
-// "clang analysis results" [ shape="box" ]
-// "scan-build" -> "clang static analyzer"
-// "clang static analyzer" -> "clang checkers"
-// "clang checkers" -> "clang analysis results"
-// "clang checkers" -> "clang AST" [ dir=back ]
-
-// // clang C code analysis
-// "clang static analyzer" -> "clang frontend"
-
-// // clang C++ code analysis
-// "clang static analyzer" -> "clang++ frontend"
-
-// "metadata json files" [ shape="box", color=green ]
-
-// "analysis goals" [ label="analysis goals", shape=box, color=green ]
-// "user config" [ label="user analysis\nbash script", shape=box, color=green ]
-// "analysis goals" -> "user config" [ style=dashed, label=manual, color=green ]
-// "analysis goals" -> "function callgraphs" [ style=dashed, label="manual", dir=back, color=green ]
-// "function callgraphs" [ label="function callgraphs\n.dot files", shape=box, color=green ]
-
-// frama-c++
-"frama-c++" [ label="frama-c++", color=blue ]
-"frama-c++" -> "clang++ frontend" [ color=blue ]
-"frama-c++" -> "framaCIRGen" [ color=blue ]
-"frama-c++" -> "frama-clang" [ color=blue ]
+// frama-c
+"frama-c" [ label="frama-c", color=blue ]
+"frama-c" -> "framaCIRGen" [ color=blue ]
+"framaCIRGen" -> "clang++ frontend" [ color=blue ]
+"frama-c" -> "frama-clang" [ color=blue ]
 
 // frama-clang analysis
 "frama-clang" [ label="frama-clang\n(OCAML)", color=blue ]
@@ -731,11 +668,6 @@ label="From Frama-C++ frontend to value analysis"
 //"cabs" -> "frama-clang" [ dir=back, color=blue ]
 "cabs" -> "frama-c" [ color=blue ]
 //"cabs" -> "frama-c" [ dir=back ]
-
-// // security analysis plugins
-// "fc security plugins" [ label="STANCE frama-c\nsecurity plugins", color=blue ]
-// "fc security plugins" -> "VA results" [ dir=back, color=blue ]
-// "security analysis results" -> "fc security plugins" [ dir=back, color=blue ]
 
 // frama-c value analysis
 "VA results" [ shape=box ]
@@ -762,7 +694,7 @@ label="From Frama-C++ frontend to value analysis"
 "user config" [ label="user config\n(bash)", shape=box ]
 "analysis goals" -> "user config" [ style=dashed, label=manual ]
 "build commands" -> "user config" [ style=dashed, label=manual ]
-"user config" -> "frama-c++"
+"user config" -> "frama-c"
 "analysis goals" -> "VA results" [ style=dashed, label="manual", dir=back ]
 }
 
@@ -821,146 +753,6 @@ digraph "Frama-C Security Analysis processes"
 labelloc="b"
 label="Frama-C Security Analysis processes"
 
-// "scan-build" [ label="clang scan-build" ]
-// "scan-callers" [ label="STANCE scan-callers\nbash script", color=blue ]
-// "cmake-callers" [ label="STANCE cmake-callers\nbash script", color=blue ]
-// "scan-callers" -> "scan-build" [ label="extends", color=blue ]
-// "scan-callers" -> "build commands" [ dir=back, color=blue ]
-
-// // user build
-// "user build" [ label="custom build\n(autoconf, cmake..)" ]
-// "build commands" [ label="build commands", shape=box ]
-// "user build" -> "build commands"
-
-// // scan build
-// "scan-build" -> "user build"
-// "scan-build" -> "build commands" [ dir=back ]
-
-// // compilation
-// "object code" [ shape="box" ]
-
-// // c compilation
-
-// "c compiler" [ label="C compiler\n(gcc, clang..)" ]
-// "build commands" -> "c compiler"
-// "c compiler" -> "c code" [ dir=back ]
-// "c compiler" -> "object code"
-
-// // c++ compilation
-// "cpp code" [ label="C++ code", shape="box" ]
-// "cpp compiler" [ label="C++ compiler\n(g++,clang++..)" ]
-// "build commands" -> "cpp compiler"
-// "cpp compiler" -> "cpp code" [ dir=back ]
-// "cpp compiler" -> "object code"
-
-// // cmake build
-// "cmake-callers" -> "cmake build" [ color=blue ]
-// "compile_commands" [ label="compile_commands.json", shape=box ]
-// "cmake build" -> "cpp compiler"
-// "cmake build" -> "c compiler"
-// "cmake build" -> "compile_commands"
-
-// "cmake-callers" -> "compile_commands" [ dir=back, color=blue ]
-
-// // cmake callers analysis
-// "cmake-callers" -> "callers frontend" [ color=blue ]
-// "cmake-callers" -> "callers++ frontend" [ color=blue ]
-
-// // clang compilation
-// "clang object code" [ label="Clang/LLVM object code", shape="box" ]
-// "llvm" [ label="LLVM" ]
-// //"llvm" [ label="LLVM Optimizer\n& Code Generator" ]
-// "llvm" -> "clang object code"
-
-// // clang compilation of C code
-// "clang compiler" [ label="Clang compiler" ]
-// "clang AST" [ shape=box ]
-// "scan-build" -> "clang compiler"
-// "clang frontend" [ label="Clang frontend" ]
-// "clang frontend" -> "c code" [ dir=back ]
-// //"clang frontend" -> "clang AST"
-// "clang AST" -> "clang frontend" [ dir=back ]
-// "clang compiler" -> "clang frontend"
-// "clang compiler" -> "clang AST"  [ dir=back ]
-// "clang compiler" -> "llvm"
-
-// // clang++ compilation of C++ code
-// "clang++ compiler" [ label="Clang++ compiler" ]
-// "scan-build" -> "clang++ compiler"
-// "clang++ frontend" [ label="Clang++ frontend" ]
-// "clang++ frontend" -> "cpp code" [ dir=back ]
-// "clang AST" -> "clang++ frontend" [ dir=back ]
-// "clang++ compiler" -> "clang++ frontend"
-// "clang++ compiler" -> "clang AST"  [ dir=back ]
-// "clang++ compiler" -> "llvm"
-
-// // clang analysis
-// "clang analysis results" [ shape="box" ]
-// "scan-build" -> "clang static analyzer"
-// "clang static analyzer" -> "clang checkers"
-// "clang checkers" -> "clang analysis results"
-// "clang checkers" -> "clang AST" [ dir=back ]
-
-// // clang C code analysis
-// "clang static analyzer" -> "clang frontend"
-
-// // clang C++ code analysis
-// "clang static analyzer" -> "clang++ frontend"
-
-// // callers analysis
-// "metadata json files" [ label="Callers metadata\njson files" ]
-// "metadata json files" [ shape="box", color=blue ]
-
-// // callers C code analysis
-// "callers frontend" [ color=blue, label="Callers frontend\n(C++)" ]
-// "callers frontend" -> "clang frontend" [ color=blue ]
-// "callers frontend" -> "clang AST" [ dir=back, color=blue ]
-// "callers frontend" -> "metadata json files" [ color=blue ]
-
-// // callers C++ code analysis
-// "callers++ frontend" [ color=blue, label="Callers++ frontend\n(C++)" ]
-// "callers++ frontend" -> "clang++ frontend" [ color=blue ]
-// "callers++ frontend" -> "clang AST" [ dir=back, color=blue ]
-// "callers++ frontend" -> "metadata json files" [ color=blue ]
-
-// // callers backends
-// "analysis goals" [ label="analysis goals", shape=box, color=blue ]
-// "user config" [ label="user analysis\nbash script", shape=box, color=blue ]
-// "analysis goals" -> "user config" [ style=dashed, label=manual, color=blue ]
-// "analysis goals" -> "function callgraphs" [ style=dashed, label="manual", dir=back, color=blue ]
-// "function callgraphs" [ label="function callgraphs\n.dot files", shape=box, color=blue ]
-// "callers backends" [ label="Callers backends\n(OCAML)", color="blue" ]
-// "metadata json files" -> "callers backends" [ color=blue ]
-// "user config" -> "callers backends" [ color=blue ]
-// "callers backends" -> "function callgraphs" [ color=blue ]
-
-// // frama-c++
-// "scan-callers" -> "frama-c++" [ color=blue ]
-// "frama-c++" [ label="frama-c++", color=blue ]
-// "frama-c++" -> "clang++ frontend" [ color=blue ]
-// "frama-c++" -> "framaCIRGen" [ color=blue ]
-// "frama-c++" -> "frama-clang" [ color=blue ]
-
-// // frama-clang analysis
-// //"scan-callers" -> "frama-clang"
-// "cmake-callers" -> "frama-clang" [ color=blue ]
-// "frama-clang" [ label="frama-clang\n(OCAML)", color=blue ]
-// "framaCIRGen" [ label="framaCIRGen\n(C++)", color=blue ]
-// //"fir" [ label="Frama-C Intermediate\nRepresentation", shape=box ]
-// "fir" [ label="Frama-C IR", shape=box, color=blue ]
-// "cabs" [ label = "C Abstract", shape=box, color=blue ]
-// //"cil" [ label = "C Intermediate Language" ]
-// "cil" [ label = "CIL", shape=box ]
-
-// "clang AST" -> "framaCIRGen" [ color=blue ]
-// //"framaCIRGen" -> "fir"
-// "fir" -> "framaCIRGen" [ dir=back, color=blue ]
-// "fir" -> "frama-clang" [ color=blue ]
-// "frama-clang" -> "cabs" [ color=blue ]
-// //"cabs" -> "frama-clang" [ dir=back, color=blue ]
-// "cabs" -> "frama-c" [ color=blue ]
-// //"cabs" -> "frama-c" [ dir=back ]
-
 // security analysis plugins
 "security analysis results" [ label="security analysis results" color=blue shape=box ]
 "fc security plugins" [ label="STANCE frama-c\nsecurity plugins", color=blue ]
@@ -996,7 +788,6 @@ label="Frama-C Security Analysis processes"
 "user config" -> "frama-c" [ style=dashed, label=manual ]
 "analysis goals" -> "security analysis results" [ style=dashed, label="manual", dir=back ]
 "analysis goals" -> "VA results" [ style=dashed, label="manual", dir=back ]
-
 }
 
 // Local Variables:
